--- a/index.html
+++ b/index.html
@@ -1,107 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Brave YouTube Music Player</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <title>Login | My Music App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
-      background-color: #121212;
-      color: #fff;
-      font-family: sans-serif;
-      padding: 2rem;
-      text-align: center;
-    }
-    input, button {
-      padding: 10px;
-      margin: 0.5rem;
-      font-size: 1rem;
-      border-radius: 5px;
-      border: none;
-    }
-    input {
-      width: 60%;
-    }
-    button {
-      background-color: #1db954;
+      background: #121212;
       color: white;
-      cursor: pointer;
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      padding: 1rem;
     }
-    iframe {
-      margin-top: 1rem;
-      width: 100%;
-      max-width: 640px;
-      height: 360px;
-      border: none;
-    }
-    ul {
-      list-style: none;
-      padding: 0;
-      margin-top: 2rem;
-    }
-    li {
-      margin: 0.3rem;
-      background: #333;
-      padding: 0.5rem;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    li:hover {
-      background: #444;
-    }
-    .playlist-title {
-      margin-top: 2rem;
-      font-size: 1.2rem;
+
+    h1 {
       color: #1db954;
+    }
+
+    .form {
+      background: #1e1e1e;
+      padding: 2rem;
+      border-radius: 10px;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      width: 100%;
+      max-width: 350px;
+    }
+
+    input {
+      padding: 0.75rem;
+      border: none;
+      border-radius: 5px;
+      font-size: 1rem;
+    }
+
+    button {
+      padding: 0.75rem;
+      background: #1db954;
+      border: none;
+      border-radius: 5px;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    .message {
+      font-size: 0.9rem;
+      color: #aaa;
     }
   </style>
 </head>
 <body>
-  <h1>🎶 Brave YouTube Music Player</h1>
-  <input id="ytInput" placeholder="Paste YouTube URL or Video ID" />
-  <button onclick="play()">▶️ Play</button>
-  <button onclick="addToPlaylist()">➕ Add to Playlist</button>
+  <h1>🎵 My Music App</h1>
+  <div class="form">
+    <input type="email" id="email" placeholder="Email" />
+    <input type="password" id="password" placeholder="Password" />
+    <button onclick="login()">Login</button>
+    <button onclick="signup()">Sign Up</button>
+    <div class="message" id="message"></div>
+  </div>
 
-  <iframe id="ytFrame" allow="autoplay"></iframe>
-
-  <div class="playlist-title">My Playlist</div>
-  <ul id="playlist"></ul>
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-auth-compat.js"></script>
 
   <script>
-    let playlist = JSON.parse(localStorage.getItem('playlist')) || [];
+    // ✅ Replace with your own Firebase config
+    const firebaseConfig = {
+    apiKey: "AIzaSyAEqwcUIstQqCb-MlLxkPlr-0ZNvhwwxoM",
+    authDomain: "youtify-805db.firebaseapp.com",
+    projectId: "youtify-805db",
+    storageBucket: "youtify-805db.firebasestorage.app",
+    messagingSenderId: "703435050654",
+    appId: "1:703435050654:web:d97572b99fd5fa9f5af58f"
+  };
 
-    function extractVideoId(input) {
-      if (input.includes('v=')) return input.split('v=')[1].split('&')[0];
-      if (input.includes('youtu.be/')) return input.split('youtu.be/')[1].split('?')[0];
-      return input;
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+
+    function login() {
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+      auth.signInWithEmailAndPassword(email, password)
+        .then(() => {
+          window.location.href = "music.html"; // ✅ redirect after login
+        })
+        .catch(err => {
+          document.getElementById("message").innerText = err.message;
+        });
     }
 
-    function play(videoId = null) {
-      const input = document.getElementById('ytInput').value;
-      const id = videoId || extractVideoId(input);
-      document.getElementById('ytFrame').src = `https://www.youtube-nocookie.com/embed/${id}?autoplay=1`;
+    function signup() {
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+      auth.createUserWithEmailAndPassword(email, password)
+        .then(() => {
+          window.location.href = "music.html"; // ✅ redirect after signup
+        })
+        .catch(err => {
+          document.getElementById("message").innerText = err.message;
+        });
     }
-
-    function addToPlaylist() {
-      const input = document.getElementById('ytInput').value;
-      const id = extractVideoId(input);
-      playlist.push(id);
-      localStorage.setItem('playlist', JSON.stringify(playlist));
-      renderPlaylist();
-    }
-
-    function renderPlaylist() {
-      const ul = document.getElementById('playlist');
-      ul.innerHTML = '';
-      playlist.forEach((id, index) => {
-        const li = document.createElement('li');
-        li.textContent = `🎵 ${id}`;
-        li.onclick = () => play(id);
-        ul.appendChild(li);
-      });
-    }
-
-    renderPlaylist();
   </script>
 </body>
 </html>
