--- a/music.html
+++ b/music.html
@@ -5,31 +5,184 @@
   <title>🎧 Youtify Music Player</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="music.css">
+  <link rel="stylesheet" href="music.css">
+  <style>
+    :root {
+      --primary-color: #1db954;
+      --bg-dark: #121212;
+      --bg-light: #181818;
+      --text-color: #fff;
+      --text-muted: #b3b3b3;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background-color: var(--bg-dark);
+      color: var(--text-color);
+      height: 100vh;
+    }
+
+    .app-container {
+      display: flex;
+      height: 100vh;
+      overflow: hidden;
+      flex-direction: column;
+    }
+
+    .sidebar {
+      display: none;
+    }
+
+    .top-bar {
+      padding: 10px 16px;
+      background: rgba(24, 24, 24, 0.9);
+      backdrop-filter: blur(8px);
+      display: flex;
+      justify-content: center;
+    }
+
+    .search-bar {
+      display: flex;
+      width: 100%;
+      max-width: 600px;
+    }
+
+    .search-bar input {
+      flex: 1;
+      padding: 12px;
+      border: none;
+      border-radius: 8px 0 0 8px;
+      outline: none;
+      background-color: #2a2a2a;
+      color: white;
+    }
+
+    .search-bar button {
+      padding: 12px;
+      border: none;
+      background: var(--primary-color);
+      border-radius: 0 8px 8px 0;
+      color: white;
+      cursor: pointer;
+    }
+
+    .main-content {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      overflow-y: auto;
+    }
+
+    .player {
+      display: flex;
+      justify-content: center;
+      padding: 12px;
+    }
+
+    #ytFrame {
+      width: 100%;
+      max-width: 700px;
+      height: 220px;
+      border: none;
+      border-radius: 12px;
+    }
+
+    h3 {
+      color: var(--primary-color);
+      margin: 16px;
+      font-size: 18px;
+    }
+
+    .carousel {
+      overflow-x: auto;
+      display: flex;
+      padding: 0 16px 20px;
+      gap: 12px;
+      scroll-snap-type: x mandatory;
+    }
+
+    .card {
+      flex: 0 0 auto;
+      width: 140px;
+      background-color: var(--bg-light);
+      border-radius: 12px;
+      padding: 8px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+      cursor: pointer;
+      transition: transform 0.2s;
+      scroll-snap-align: start;
+    }
+
+    .card:hover {
+      transform: scale(1.05);
+    }
+
+    .card img {
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+    }
+
+    .card-title {
+      font-size: 13px;
+      font-weight: 600;
+      margin-top: 6px;
+      color: white;
+    }
+
+    .card-subtitle {
+      font-size: 11px;
+      color: var(--text-muted);
+    }
+
+    @media (min-width: 768px) {
+      .card {
+        width: 160px;
+      }
+
+      #ytFrame {
+        height: 400px;
+      }
+    }
+  </style>
 </head>
 <body>
+  <div class="app-container">
+    <header class="top-bar">
+      <div class="search-bar">
+        <input id="searchInput" placeholder="Search music, artists..." />
+        <button onclick="searchYouTube()">🔍</button>
+      </div>
+    </header>
 
-  <h1>🎧 Youtify Music Player</h1>
+    <main class="main-content">
+      <section class="player">
+        <iframe id="ytFrame" allow="autoplay" allowfullscreen></iframe>
+      </section>
 
-  <div class="search-box">
-    <input id="searchInput" placeholder="Search for music..." />
-    <button onclick="searchYouTube()">🔍 Search</button>
+      <section>
+        <h3>Search Results</h3>
+        <div class="carousel" id="results"></div>
+      </section>
+
+      <section>
+        <h3>My Playlist</h3>
+        <div class="carousel" id="playlist"></div>
+      </section>
+    </main>
   </div>
 
-  <iframe id="ytFrame" allow="autoplay"></iframe>
-
-  <div class="section-title">Search Results</div>
-  <div class="results" id="results"></div>
-
-  <div class="section-title">My Playlist</div>
-  <div class="playlist" id="playlist"></div>
-
-  <!-- Firebase App (required) -->
+  <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
 
-  <!-- Your JS -->
+  <!-- JS Logic -->
   <script src="music.js"></script>
 </body>
 </html>
