music full screen

--- a/music.html
+++ b/music.html
@@ -240,6 +240,20 @@
   </div>
 </section>
 
+<div id="fullPlayer" class="full-player" style="display: none;">
+  <div class="full-header">
+    <button onclick="collapseFullPlayer()">⬅ Back</button>
+  </div>
+  <div class="full-body" id="swipeArea">
+    <img id="fullThumb" src="" alt="Thumbnail" />
+    <div class="info">
+      <h2 id="fullTitle">Title</h2>
+      <p id="fullChannel">Channel</p>
+    </div>
+  </div>
+</div>
+
+
 
     <div id="ytFrameContainer"></div>
   </div>
